--- a/.github/workflows/packAndPush.yaml
+++ b/.github/workflows/packAndPush.yaml
@@ -1,4 +1,4 @@
-name: apply
+name: packAndPush
 on:
   push:
     branches: 
@@ -7,8 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Helm Package and Push
-    env:
-      tf_plan_location: aws/terraform/services/${{ github.event.inputs.service }}
     steps:
       - name: Checkout Source
         id: git_checkout
@@ -18,14 +16,12 @@ jobs:
         id: install_helm
       - name: Package
         id: package
-        shell: cmd
         run: |
           helm package atlas
           mv -v atlas-*.tgz docs/
           helm repo index docs --url https://${GITHUB_REPOSITORY_OWNER}.github.io/${{ github.event.repository.name }}
       - name: Push
         id: push
-        shell: cmd
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Bot"
